examples/test/testpolicy19226.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19226
  namespace: namespace401
spec:
  podSelector:
    matchLabels:
      key44: value42
      key31: value31
      key39: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value27
          key9: value22
          key6: value38
      podSelector:
        matchLabels:
          key49: value21
          key22: value16
